ecmascript/parser/tests/test262-error-references/fail/91150a288bbb31b3.js.stderr
error: Unexpected token `numeric literal`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/91150a288bbb31b3.js:1:15
  |
1 | try {} catch (0) {} 
  |               ^

